--- a/kanbas-react-web-app/package.json
+++ b/kanbas-react-web-app/package.json
@@ -50,7 +50,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "nodemon": "^3.1.6",
     "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "ts-node": "^10.9.2"
   }
 }
