--- a/kanbas-react-web-app/.eslintrc.json
+++ b/kanbas-react-web-app/.eslintrc.json
@@ -11,6 +11,11 @@
     "prettier"  ],
   "rules": {
     "no-console": 0,
-    "prettier/prettier": 2 // Means error  
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
